# adventofcode2020

./: .editorconfig  CMakeLists.txt  README.md  temp.txt
day1/: CMakeLists.txt  day1.cpp
day11/: CMakeLists.txt  day11.c
day12/: CMakeLists.txt  day12.cpp
day13/: CMakeLists.txt  day13.c
day2/: CMakeLists.txt  day2.c
day3/: CMakeLists.txt  day3.cpp
day4/: CMakeLists.txt  day4.cpp
day5/: CMakeLists.txt  day5.c
day6/: CMakeLists.txt  day6.c
day7/: CMakeLists.txt  day7.cpp
day8/: CMakeLists.txt  day8.cpp
day9/: CMakeLists.txt  day9.c
inputs/: input11.1.txt  input11.txt  input13.txt
